# 20260704-quarter-roadmap-multi-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml  requirements.txt
.agents/: CONTEXT.md
.agents/scripts/: validate_tool_call.py
.agents/skills/roadmap-conventions/: SKILL.md
.semgrep/: rules.yaml
app/: __init__.py  agent.py  fast_api_app.py  models.py  tools.py
app/app_utils/: a2a.py  reasoning_engine_adapter.py  telemetry.py  typing.py
app/data/promptjang/: initiatives_q2.json  initiatives_q3.json  org.json
data/: README.md
data/promptjang/: events.json  initiatives_q1.json  initiatives_q2.json  initiatives_q3.json  utilization.json
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
docs/: architecture.md  deploy.md  video_script.md  writeup.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  api.ts  style.css  types.ts
frontend/src/components/: CapacityBanner.vue  ChatPanel.vue  ItemCard.vue
mcp_server/: roadmap_mcp.py
submission_frontend/: agent_runtime.py  main.py
submission_frontend/static/: app.js  style.css
submission_frontend/templates/: index.html
submission_frontend/templates/partials/: _card.html
tests/: test_agent_graph.py  test_data_loaders.py  test_models.py  test_redaction.py
tests/eval/: metrics.py
tests/integration/: test_agent.py  test_server_e2e.py
